--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "styled-components": "^5.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
