--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "formik": "^2.4.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.1.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
