--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.13.0-pre.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.3"
